[package]
# Distribution information.
name = "xdpilone"
version = "1.0.4"

# User facing information.
description = "Interaction with Linux XDP sockets and rings. No libbpf/libxpd-sys. Lightweight, high-performance."
license = "EUPL-1.2"
authors = ["Andreas Molzer"]
categories = ["network-programming", "os::linux-apis", "no-std"]
repository = "https://github.com/HeroicKatora/xdpilone"
readme = "Readme.md"

# Cargo&resolver configuration
edition = "2021"
rust-version = "1.65.0"

[dependencies.libc]
version = "0.2"
default-features = false
# For exclusion of multiple devices on the same queue.
[dependencies.spin]
version = "0.9"
features = ["rwlock"]
default-features = false

[dev-dependencies.clap]
version = "4"
features = ["derive"]

[badges]
maintenance = { status = "passively-maintained" }
